# jukov20221010

./: Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml  test_something.py
.github/workflows/: main.yml
